--- a/css/contact.css
+++ b/css/contact.css
@@ -174,7 +174,7 @@
 
 .form-label-optional {
     font-weight: 400;
-    color: #8888aa;
+    color: #5e5e80;
 }
 
 /* Maps link inside contact card */
